# AIStk

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aistk/: __init__.py  cli.py  core.py  events.py  io.py  schema.py  spatial.py  stats.py  stats_streaming.py  utils.py  viz.py
aistk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aistk/.github/workflows/: ci.yml  docs.yml
aistk/backends/: dask_backend.py  spark_backend.py
benchmarks/: README.md  benchmark_large_csv.py
data/sample/: ais_sample.csv
docs/: __init__.md  cli.md  events.md  index.md  io.md  spatial.md  stats.md  viz.md
docs/modules/: cli.md  core.md  dask_backend.md  events.md  events_online.md  schema.md  spark_backend.mf  streaming_stats.md  utils.md
examples/: 00_end_to_end_demo.ipynb  00_end_to_end_demo.py  01_getting_started.ipynb  01_getting_started.py  01_quickstart.ipynb  01_quickstart.py  02_compute_stats.py  02_engineered_features.ipynb  02_stats_streaming_polars.ipynb  02_stats_streaming_polars.py  03_detect_events_and_map.py  03_events_and_maps.ipynb  03_events_batch.ipynb  03_events_batch.py  04_events_online_from_csv.ipynb  04_events_online_from_csv.py  05_dask_large_stats.ipynb  05_dask_large_stats.py  06_spark_large_stats.ipynb  06_spark_large_stats.py  07_map_quicklook.ipynb  07_map_quicklook.py  08_spatial_h3_geofence.ipynb  08_spatial_h3_geofence.py  README.md
results/benchmark_ais_2024_01_01_v4/: benchmark_results.csv  benchmark_results.json  benchmark_table_for_manuscript.csv  benchmark_table_for_manuscript.json  input_diagnostics.json
tests/: conftest.py  conftests.py  test_backends_dask.py  test_cli.py  test_core.py  test_csv_dialect_schema.py  test_events.py  test_quickstart_examples.py  test_stats.py  test_stats_streaming.py  test_streaming_online.py
tests/data/: mini_ais.csv
