
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "aistk"
version = "1.0.0"
description = "AIS Toolkit for high-resolution spatio-temporal datasets"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Irmina Durlik" },
]
keywords = [
    "ais",
    "maritime",
    "tracking",
    "polars",
    "spatio-temporal",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "polars>=1.5.0",
    "numpy>=1.24",
    "pyarrow>=12.0",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/irmina-d/AIStk"
Documentation = "https://irmina-d.github.io/AIStk/"
Repository = "https://github.com/irmina-d/AIStk"
Issues = "https://github.com/irmina-d/AIStk/issues"

[project.optional-dependencies]
viz = ["folium"]
benchmark = ["psutil>=5.9", "pandas>=2.0"]
dask = ["dask[dataframe]>=2024.1.0"]
spark = ["pyspark>=3.5"]
spatial = ["shapely>=2.0", "h3>=3.7"]
dev = ["pytest>=7.4", "ruff>=0.5"]

[project.scripts]
aistk = "aistk.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["aistk*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
